further updates to compile and run with Java5 and Java6
git-svn-id: http://red5.googlecode.com/svn/java/server/trunk@1705 1b6495e4-3631-0410-8e05-8f51eee8b9cc